# kkf

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  IMPROVEMENTS_SUMMARY.md  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  python-publish.yml  tests.yml
KKF/: DynamicalSystems.py  KKFsol.py  __init__.py  applyKKF.py  filter.py  kEDMD.py  koopman.py  solution.py  systems.py
KKKF/: DynamicalSystems.py  applyKKKF.py  quickstart.py
docs/: api.rst  conf.py  index.rst  sg_execution_times.rst  theory.rst
examples/: 01_basic_linear_system.py  02_sir_epidemic_model.py  03_advanced_parameter_exploration.py  GALLERY_HEADER.md  GALLERY_HEADER.rst  README.md
kkf/: __init__.py  covariances.py  filter.py  koopman.py  solution.py  systems.py
tests/: conftest.py  test_core.py  test_utils.py
